Finishes video and overlay buttons Fixes z-index issues Adds in new fonts

--- a/website/scss/_mixins.scss
+++ b/website/scss/_mixins.scss
@@ -54,9 +54,13 @@
 }
 
 @mixin dropshadow() {
-    -webkit-box-shadow: 0 0 15px 0 rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    0 0 15px 0 rgba(50, 50, 50, 0.75);
-    box-shadow:         0 0 15px 0 rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: 0 4px 12px 0 rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0 4px 12px 0 rgba(50, 50, 50, 0.75);
+    box-shadow:         0 4px 12px 0 rgba(50, 50, 50, 0.75);
+
+//    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.75);
+//    -moz-box-shadow:    0px 4px 12px 0px rgba(0,0,0,0.75);
+//    box-shadow:         0px 4px 12px 0px rgba(0,0,0,0.75);
 }
 
 @mixin placeholder {
