--- a/website/scss/presentation.scss
+++ b/website/scss/presentation.scss
@@ -34,6 +34,8 @@ p {
         height: 600px;
         background: url("../images/chapter.png") 0 0 no-repeat;
         background-size: cover;
+        position: relative;
+        @include dropshadow();
     }
 
     .launchers {
@@ -42,18 +44,27 @@ p {
         width: 120px;
         height: 120px;
         border-radius: 50%;
-        z-index: -10;
-        @include transitions(0.25s);
-        background: #dcdcdc;
+        @include transitions(0.15s);
+        @include dropshadow();
+        background: #ffffff;
         border: none;
 
         &:hover {
             background: #f5f5f5;
         }
+
+        i {
+            width: 120px;
+            line-height: 120px;
+            font-size: 3.2em;
+            text-align: center;
+            color: $clr-green-dark;
+        }
     }
 
     .video-launcher {
         left: 0;
+        font-size: 1.2rem;
     }
 
     .overlay-launcher {
@@ -63,11 +74,30 @@ p {
     &.active {
 
         .video-launcher {
-            left: -80px;
+            left: -60px;
+
+            &:hover {
+                left: -90px;
+                font-size: 1.1em;
+
+                i {
+                    color: $clr-green;
+                }
+            }
         }
 
         .overlay-launcher {
-            right: -80px;
+            right: -60px;
+
+            &:hover {
+                right: -90px;
+                font-size: 1.6em;
+                color: $clr-green;
+
+                i {
+                    color: $clr-green;
+                }
+            }
         }
     }
 }
@@ -106,7 +136,7 @@ p {
 }
 
 .counter {
-    z-index: 2;
+    //z-index: 2;
     position: fixed;
     left: 20px;
     top: 50%;
@@ -128,7 +158,7 @@ p {
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 15;
+    z-index: 1;
 
     ul {
         text-align: center;
@@ -161,7 +191,7 @@ p {
                 line-height: 30px;
                 @include transitions(0.25s);
                 opacity: 0;
-                z-index: 5;
+                z-index: 1;
             }
 
             .title {
@@ -187,7 +217,7 @@ p {
 
             &.active,
             &:hover {
-                z-index: 10;
+                //z-index: 10;
                 width: 90px;
 
                 .number {
@@ -214,7 +244,7 @@ p {
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 12;
+    z-index: 1;
 
     a {
         font-size: 50px;
